@@ -1,3 +1,10 @@
+Sat Apr 25 02:21:18 1998    <chris@magicon.ping.de>
+
+	* Cleaned up some stuff. Removed error messages when device is busy
+	* Reduced buffers from 160 to 8 ;-)
+	* This is the first good and reliable version. Voila, we have now a sound
+	capable desktop.
+
 Fri Apr 24 23:13:43 1998    <chris@magicon.ping.de>
 
 	*  Checked, why long media caused pops and noises. Found out maudio was not
